compiler/testData/diagnostics/tests/annotations/referenceOfAnnotatedFunctionInAnnotation.kt
// FIR_IDENTICAL
// WITH_STDLIB
// ISSUE: KT-58447

fun @ParameterName(<!UNRESOLVED_REFERENCE!>component2<!>) Int.component2() = this + 2
